// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SuggestibleInput matches snapshot 1`] = `
<div
  class="formatted-input suggestible-input"
>
  <div
    class="bp6-input-group"
  >
    <input
      class="bp6-input"
      style="padding-right: 0px;"
      type="text"
    />
    <span
      class="bp6-input-action"
    >
      <span
        class="bp6-popover-target"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-caret-down"
          >
            <svg
              data-icon="caret-down"
            />
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`SuggestibleInput matches snapshot with escaped value 1`] = `
<div
  class="formatted-input suggestible-input"
>
  <div
    class="bp6-input-group"
  >
    <input
      class="bp6-input"
      style="padding-right: 0px;"
      type="text"
      value="Here are some chars \\t\\r\\n lol"
    />
    <span
      class="bp6-input-action"
    >
      <span
        class="bp6-popover-target"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="bp6-button bp6-minimal"
          type="button"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-caret-down"
          >
            <svg
              data-icon="caret-down"
            />
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
